--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #fff1d7;
+  color: #60584f;
+}
+
+#__next {
+  height: 100%;
 }
 
 a {
