--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .container {
   height: 100%;
-  padding: 0 2rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -10,9 +10,36 @@
   padding-top: 20px;
 }
 
+.navBar {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.connectWalletButton {
+  width: 140px;
+  padding: 0.5em;
+  border: 0;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: white;
+  background: -webkit-linear-gradient(left, #e5771b, #753d16);
+  background-size: 200% 200%;
+  animation: gradient-animation 4s ease infinite;
+}
+
+.address {
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #e5771b;
+  color: black;
+}
+
 .avatarContainer {
   margin: 0 auto;
   width: fit-content;
+  padding-top: 15px;
 }
 
 .avatar {
@@ -79,19 +106,3 @@
 .twitterLink {
   text-decoration: underline;
 }
-/* 
-.connectWalletButton {
-  height: 45px;
-  border: 0;
-  width: auto;
-  padding-left: 40px;
-  padding-right: 40px;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-  color: white;
-  background: -webkit-linear-gradient(left, #60c657, #35aee2);
-  background-size: 200% 200%;
-  animation: gradient-animation 4s ease infinite;
-} */
