--- a/styles/components/about.module.css
+++ b/styles/components/about.module.css
@@ -24,3 +24,15 @@
   font-size: 18px;
   text-align: center;
 }
+
+.editContainer {
+  width: 125px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  opacity: 0.65;
+}
+
+.editButton:hover {
+  cursor: pointer;
+}
