--- a/styles/components/propose.module.css
+++ b/styles/components/propose.module.css
@@ -4,23 +4,16 @@
   justify-content: center;
 }
 
-.input {
-  padding: 6px;
+.inputContainer {
   margin-right: 1em;
   width: 70%;
   max-width: 300px;
+}
+
+.input {
+  padding: 6px;
   background-color: #f2dbb2;
   border: none;
   border-radius: 5px;
   box-shadow: 0 2px 2px rgb(0 0 0 / 0.2);
-}
-
-.button {
-  background-color: #0fb00c;
-  color: black;
-  cursor: pointer;
-  padding: 8px;
-  border: 0;
-  border-radius: 5px;
-  font-weight: 500;
 }
