--- a/styles/bulma_globals.scss
+++ b/styles/bulma_globals.scss
@@ -1,4 +1,5 @@
 @import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/elements/box.sass";
 @import "bulma/sass/elements/button.sass";
 @import "bulma/sass/components/modal.sass";
 @import "bulma/sass/form/shared.sass";
