add upvote/downvote functionality

--- a/styles/components/proposal_list.module.scss
+++ b/styles/components/proposal_list.module.scss
@@ -18,6 +18,7 @@
 .down {
   font-size: 24px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .score {
@@ -36,4 +37,8 @@
 .title {
   font-size: 22px;
   font-weight: 600;
+}
+
+.orange {
+  color: $orange;
 }
