add isMining indicator to upvote & downvote

--- a/styles/components/proposal_list.module.scss
+++ b/styles/components/proposal_list.module.scss
@@ -42,3 +42,13 @@
 .orange {
   color: $orange;
 }
+
+.fakeButton {
+  background-color: $milk;
+  border: none;
+}
+
+.isMining {
+  font-weight: normal;
+  font-size: 0.5em;
+}
