--- a/styles/global_variables.scss
+++ b/styles/global_variables.scss
@@ -4,3 +4,5 @@ $metamask: #ea7b1b;
 $metamask-dark: #763d16;
 $ethereum: #62688f;
 $ethereum-light: #8388a9;
+$solana-purple: #9945ff;
+$solana-green: #14f195;
