--- a/styles/components/proposal_list.module.scss
+++ b/styles/components/proposal_list.module.scss
@@ -1,6 +1,6 @@
 @import "../bulma_globals.scss";
 
-.container {
+.proposalContainer {
   display: flex;
   justify-content: space-between;
   max-width: 500px;
@@ -9,20 +9,38 @@
   padding: 1em;
 }
 
-.upvotes {
+.scoreContainer {
   width: 10%;
-  text-align: center;
 }
 
-.up,
-.down {
+.arrowContainer {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.arrowButton {
+  background-color: transparent;
+  border: none;
+  width: 34px;
+  height: 30px;
+  padding: 0;
+  margin: 0 auto;
   font-size: 24px;
   font-weight: bold;
-  cursor: pointer;
+}
+
+.highlighted {
+  color: $metamask;
+}
+
+.isMiningText {
+  font-weight: normal;
+  font-size: 0.5em;
 }
 
 .score {
   font-size: 21px;
+  text-align: center;
 }
 
 .info {
@@ -37,18 +55,4 @@
 .title {
   font-size: 22px;
   font-weight: 600;
-}
-
-.orange {
-  color: $orange;
-}
-
-.fakeButton {
-  background-color: $milk;
-  border: none;
-}
-
-.isMining {
-  font-weight: normal;
-  font-size: 0.5em;
 }
