--- a/styles/Poll.module.css
+++ b/styles/Poll.module.css
@@ -14,7 +14,8 @@
 
 .navBar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .main {
