add separator for cycles

--- a/styles/components/proposal_list.module.scss
+++ b/styles/components/proposal_list.module.scss
@@ -56,3 +56,10 @@
   font-size: 22px;
   font-weight: 600;
 }
+
+.separator {
+  font-size: 1.2em;
+  font-weight: 600;
+  text-align: center;
+  margin: 0.5em auto;
+}
