--- a/styles/global_variables.scss
+++ b/styles/global_variables.scss
@@ -2,6 +2,10 @@ $milk: #fff1d7;
 $charcoal: #60584f;
 $metamask: #ea7b1b;
 $metamask-dark: #763d16;
+$coinbase-light: #4480ff;
+$coinbase-dark: #0439c2;
+$phantom-light: #926fff;
+$phantom-dark: #5134c9;
 $ethereum: #62688f;
 $ethereum-light: #8388a9;
 $solana-purple: #9945ff;
